<resources>
    <string name="app_name">ניהול מגרשי ספורט - באר שבע</string>
    <string name="welcome_to_sport_fields_management">ברוכים הבאים לניהול מגרשי ספורט</string>
    <string name="logout">התנתק</string>
    <string name="manage_fields">ניהול מגרשים</string>
    <string name="remove_fields">הסרת מגרשים</string>
    <string name="sport_fields_management">ניהול מגרשי ספורט</string>
    <string name="loginPage">מסך התחברות</string>
    <string name="registerPage">מסך הרשמה</string>
    <string name="login">התחברות</string>
    <string name="email">אימייל</string>
    <string name="password">סיסמא</string>
    <string name="doesn_t_have_an_account_register_here">אין לך חשבון? לחץ כאן להירשם</string>
    <string name="select_a_field_to_manage">בחר סוג מגרש לניהול</string>
    <string name="register">הרשמה</string>
    <string name="full_name">שם מלא</string>
    <string name="phone_number">מספר פלאפון</string>
    <string name="already_registered_login_here">כבר נרשמת? לחץ כאן להתחבר</string>
    <string name="select_type_of_field_to_remove">בחר סוג מגרש להסרה</string>
    <string name="selectAfield">בחר מגרש</string>
    <string name="footballFieldsList">רשימת מגרשי כדורגל</string>
    <string name="basketFieldsList">רשימת מגרשי כדורסל</string>
    <string name="gymAreasList">רשימת אזורי כושר</string>
    <string name="back">חזור</string>
    <string name="next">המשך</string>
    <string name="gymAreas">אזורי כושר</string>
    <string name="footballFields">מגרשי כדורגל</string>
    <string name="basketballFields">מגרשי כדורסל</string>
    <string name="selectDate">לחץ כאן לבחירה</string>
    <string name="date">תאריך:</string>
    <string name="reserveField">שריין מגרש</string>
    <string name="selectHours">בחר שעות</string>
    <string name="joinTraining">הירשם לאימון</string>
    <string name="startGroupTraining">התחל אימון קבוצתי</string>
    <string name="reserveSpot">שריין מקום</string>
    <string name="search_fields">חיפוש מגרשים כללי</string>
    <string name="my_activity">הפעילויות שלי</string>
    <string name="my_personal_workouts">אימוני הכושר שלי</string>
    <string name="turnirs_and_trainings">טורנירים ואימונים</string>
    <string name="my_activities">הפעילויות שלי</string>
    <string name="remove_activity">הסר פעילות</string>
    <string name="todo">TODO</string>
    <string name="football">כדורגל</string>
    <string name="basketball">כדורסל</string>
    <string name="select_type_of_field">בחר סוג מגרש</string>
    <string name="remove_field">הסר מגרש</string>
    <string name="gym_area">אזור כושר</string>
    <string name="search_fields_by_neighborhood">חיפוש מגרשים לפי שכונה</string>
    <string name="select_neighborhood">בחר שכונה</string>
</resources>
