<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    >


    <Button
        android:id="@+id/AviliableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/search_fields"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#882446"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/MyReserveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <Button
        android:id="@+id/MyReserveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/my_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#882446"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/AviliableBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="352dp"
        app:layout_constraintTop_toTopOf="@+id/TurnirsBtn" />

    <Button
        android:id="@+id/TurnirsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/turnirs_and_trainings"
        android:textColor="#882446"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyReserveBtn" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:text="@string/logout"
        android:textColor="#5E1930"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/next"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fields_img1" />

</androidx.constraintlayout.widget.ConstraintLayout>